@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
skinparam CircledCharacterFontSize 0
skinparam CircledCharacterRadius 0

interface Command
class Ui
class Inventory
class Item
class RenameCommand
class Parser
class ItemStorage

RenameCommand <.. Parser
Command <|. RenameCommand
Ui <.. RenameCommand
Inventory <.. RenameCommand
Item <.. RenameCommand
ItemStorage <.. RenameCommand
Inventory <.. ItemStorage

interface Command <<interface>> {
    +execute():void
    +isQuit():boolean
}

class RenameCommand {
    -name:String
    -newName:String
    +RenameCommand()
    +execute():void
    +isQuit():boolean
}

class Item {
    +Item()
    +getName():String
    +getQuantity():int
    +getPrice():double
    +getExpiryDate():LocalDate
}

class Ui {
    {static}+renameCommandSuccess():void
}

class Parser {
    {static}-ParseRenameCommand(input:String):RenameCommand
}

class Inventory {
    {static}+get(name:String):Item
    {static}+put(name:String, item:Item):void
    {static}+delete(name:String):void
}

class ItemStorage {
    {static}+saveData():void
}

note "Some parameters and methods \nomitted for brevity" as n1

@enduml

@startuml
hide footbox
participant "SuperTracker" as SuperTracker <<class>> #f5e3a9
participant ":RenameCommand" as RenameCommand #cbf7f4
participant "ItemStorage" as ItemStorage <<class>> #bcf7cf
participant "Inventory" as Inventory <<class>> #d5eac2
participant "Ui" as Ui <<class>> #e5c2ea
participant "oldItem:Item" as oldItem #ffa1a1
participant ":Item" as Item #fbffb2

SuperTracker -> RenameCommand : execute()
activate RenameCommand #cbf7f4

RenameCommand -> Inventory : get(name:String)
activate Inventory #d5eac2
Inventory --> RenameCommand : oldItem:Item
deactivate Inventory

RenameCommand -> oldItem: getName()
activate oldItem #ffa1a1
oldItem --> RenameCommand: oldName:String
deactivate oldItem

RenameCommand -> oldItem: getQuantity()
activate oldItem #ffa1a1
oldItem --> RenameCommand: quantity:int
deactivate oldItem

RenameCommand -> oldItem: getPrice()
activate oldItem #ffa1a1
oldItem --> RenameCommand: price:double
deactivate oldItem

RenameCommand -> oldItem: getExpiryDate()
activate oldItem #ffa1a1
oldItem --> RenameCommand: expiryDate:LocalDate
deactivate oldItem

RenameCommand -> Item ** : new Item(name:String, quantity:int, price:double, expiryDate:LocalDate)
activate Item #fbffb2
Item --> RenameCommand : newItem:Item
deactivate Item

RenameCommand -> Inventory : delete(name:String)
activate Inventory #d5eac2
Inventory --> RenameCommand
deactivate Inventory

RenameCommand -> Inventory : put(newName:String, newItem:Item)
activate Inventory #d5eac2
Inventory --> RenameCommand
deactivate Inventory

RenameCommand -> Ui : renameCommandSuccess(newItem:Item, oldName:String)
activate Ui #e5c2ea
Ui --> RenameCommand
deactivate Ui

RenameCommand -> ItemStorage : saveData()
activate ItemStorage #bcf7cf
ItemStorage --> RenameCommand
deactivate ItemStorage

RenameCommand --> SuperTracker
deactivate RenameCommand
@enduml